# expo-voicevox

./: .gitignore  README.md  expo-module.config.json  package-lock.json  package.json
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  voicevox_jni.cpp
android/src/main/java/expo/modules/voicevox/: ExpoVoicevoxModule.kt  VoicevoxBridge.kt
example/: app.json  metro.config.js  package-lock.json  package.json
example/app/: index.tsx
ios/: ExpoVoicevox.podspec  ExpoVoicevoxModule.swift
ios/Frameworks/voicevox_core.xcframework/ios-arm64/voicevox_core.framework/: voicevox_core
ios/Frameworks/voicevox_onnxruntime.xcframework/ios-arm64/voicevox_onnxruntime.framework/: Info.plist
ios/Frameworks/voicevox_onnxruntime.xcframework/ios-arm64_x86_64-simulator/voicevox_onnxruntime.framework/: Info.plist
src/: ExpoVoicevox.types.ts  ExpoVoicevoxModule.ts  index.ts
